unpackaged/main/default/objects/FPC_Lender_Split_Points__c/FPC_Lender_Split_Points__c.object-meta.xml
<CustomObject>
    <description>This table will contain the split points criteria for each lender.</description>
    <label>Lender Split Points</label>
    <nameField>
        <displayFormat>LSP# {00000}</displayFormat>
        <label>FPC Lender Split Points Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lender Split Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>