unpackaged/main/default/objects/FPC_Lender_Split_Points__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Master Detail Relationship to Account.</description>
    <inlineHelpText>Master Detail Relationship to Account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>FPC_Lender_Split_Points</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>