unpackaged/main/default/objects/FPC_Lender_Split_Points__c/fields/Low_Equipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Low_Equipment_Cost__c</fullName>
    <description>This field will indicate the low dollar cost at which a split point calculation occurs.</description>
    <inlineHelpText>This field will indicate the low dollar cost at which a split point calculation occurs.</inlineHelpText>
    <label>Low Equipment Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>