unpackaged/main/default/objects/FPC_Lender_Split_Points__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>This field will indicate the rate at which split points are calculated based on the lender criteria.</description>
    <inlineHelpText>This field will indicate the rate at which split points are calculated based on the lender criteria.</inlineHelpText>
    <label>Rate</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>