unpackaged/main/default/objects/FPC_Lender_Split_Points__c/fields/Split_Points_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Split_Points_Criteria__c</fullName>
    <description>This field will indicate what criteria a lender uses to calculate split points in a transaction.</description>
    <inlineHelpText>Please select what criteria a lender uses to calculate split points in a transaction.</inlineHelpText>
    <label>Split Points Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Equipment Cost</fullName>
            </value>
            <value>
                <fullName>Rate</fullName>
            </value>
            <value>
                <fullName>Time in Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>