unpackaged/main/default/objects/FPC_Lender_Split_Points__c/fields/Split_Points_Low__c.field-meta.xml
<CustomField>
    <fullName>Split_Points_Low__c</fullName>
    <description>This field will contain the low split points for the lender.</description>
    <inlineHelpText>This field will contain the low split points for the lender.</inlineHelpText>
    <label>Split Points Low</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>